# neuronet

./: .gitignore  CMakeLists.txt  README.md  install.sh
.github/workflows/: build.yml
examples/: CMakeLists.txt  benchmark.cpp  huggingface_example.cpp  interactive_qa.cpp  simple_example.cpp
include/neuronet/: neuronet.h
include/neuronet/backends/cpu/: cpu_backend.h  cpu_ops.h
include/neuronet/backends/cuda/: cuda_backend.h  cuda_ops.h
include/neuronet/backends/metal/: metal_backend.h  metal_ops.h  metal_wrapper.h
include/neuronet/core/: device.h  memory.h  ops.h  tensor.h
include/neuronet/models/: huggingface.h  model.h
include/neuronet/nlp/: tokenizer.h
include/neuronet/nn/: activations.h  layers.h  loss.h  optimizer.h  sequential.h
include/neuronet/utils/: json.h  logging.h
python/: setup.py
src/backends/cpu/: cpu_backend.cpp  cpu_ops.cpp
src/backends/cuda/: cuda_backend.cu  cuda_ops.cu
src/backends/metal/: metal_backend.mm  metal_ops.mm  metal_wrapper.mm
src/core/: device.cpp  memory.cpp  ops.cpp  tensor.cpp
src/models/: huggingface.cpp  model.cpp
src/nlp/: tokenizer.cpp
src/nn/: activations.cpp  layers.cpp  loss.cpp  optimizer.cpp
src/utils/: json.cpp  logging.cpp
tests/: CMakeLists.txt  test_main.cpp  test_nn.cpp  test_ops.cpp  test_tensor.cpp
